# omnidirectional_car

./: .gitignore  README.md
App/: README.md  pyproject.toml
App/App/: main.py  style.kv
App/tests/: __init__.py
Microcontroller/: compile_commands.json  platformio.ini
Microcontroller/src/: main.cpp
Microcontroller/veiculo_omnidimensional_programação_do_esp32/src/: main.cpp
OneDrive/Área de Trabalho/Git/: README.md
SimpleApp/: pyproject.toml
SimpleApp/SimpleApp/: main.py
veiculo_omnidimensional_programação_do_esp32/: platformio.ini
