[project]
name = "SimpleApp"
version = "0.1.0"
description = ""
authors = [{ name = "Marcio Bulla", email = "contato@marciobulla.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "bleak>=0.22.2,<0.23",
    "keyboard>=0.13.5,<0.14",
    "pynput>=1.7.7,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

